add_executable(fork fork)
add_executable(vfork vfork)
add_executable(exit_status exit_status exit)
add_executable(waitpid waitpid)
add_executable(race race)
add_executable(avoid_race avoid_race)
add_executable(exec exec)
add_executable(echo_env echo_env)
add_executable(exec_intr exec_intr)
add_executable(08fig22 08fig22)
add_executable(systest systest)
add_executable(pruids pruids)
add_executable(acct_data acct_data)
add_executable(print_sel_acct print_sel_acct)
add_executable(getlogin getlogin)
add_executable(08fig30 08fig30)
add_executable(pr_times pr_times)
add_executable(08ex01 08ex01)
add_executable(08ex02 08ex02)
add_executable(08ex03 08ex03)
add_executable(08ex06 08ex06)
