cmake_minimum_required(VERSION 3.11)


make_individual(15fig05 15fig06 15fig11 15fig14 15fig15 15fig17 15fig18 15fig19
  15fig31 15fig33 15fig33a)


make_individual(15ex01 15ex02 15ex03 15ex04 15ex05 15ex07 15ex08 15ex10 15ex12
  15ex15 15ex16 15ex18)

add_executable(15ex17 15ex17)

add_libthreads(15ex18)
